# modelctl

./: .gitignore  README.md  modelctl  modelctl.py  modelctl_core.py  pyproject.toml
.github/workflows/: test.yml
docs/: archive-and-rollback.md  roadmap.md  safety.md  settings-rules.md
examples/: models.ini
tests/: test_archive_and_actions.py  test_archive_mutations.py  test_cli_framework_safety.py  test_cli_user_experience.py  test_import_autodetect_safety.py  test_model_advanced_ux.py  test_model_real_features.py  test_model_ux_requirements.py  test_production_readiness.py  test_ux_delete_and_roadmap.py
